<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="224dp"
        android:onClick="onButtonClicked"
        android:text="@string/clickme" />

    <ToggleButton
        android:id="@+id/ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="504dp"
        android:onClick="OnToggleButtonClicked"
        android:textOff="@string/off"
        android:textOn="@string/on" />

    <Switch
        android:id="@+id/switch_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="489dp"
        android:onClick="onSwitchClicked"
        android:textOff="@string/off"
        android:textOn="@string/on"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <CheckBox
        android:id="@+id/checkbox_milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="130dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/milk" />

    <CheckBox
        android:id="@+id/checkbox_sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="200dp"
        android:layout_marginBottom="130dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/sugar" />

</RelativeLayout>